[package]
name = "rust_shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#![feature(io_error_more)]
wildmatch = "2.1.0"
users = "0.11.0"
file-owner = "0.1.1"
lazy_static = "1.4.0"
glob = "0.3.0"
dirs = "4.0.0"
whoami = "1.2.1"
